Release 1.20.2-pre2 (snapshot)