@@ -1,47 +1,248 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface od {
-   static void a(ns<dvo> $$0) {
-      hh<dvi> $$1 = $$0.a(je.az);
-      hh<cqt> $$2 = $$0.a(je.ap);
-      hg.c<dvo> $$3 = $$0.a(
-         dvb.a,
-         new dvo(
-            List.of(dvo.a($$1.b(dvc.t)), dvo.a($$1.b(dvc.u)), dvo.a($$1.b(dvc.v)), dvo.a($$1.b(dvc.w)), dvo.a($$1.b(dvc.x))), new dwd(34, 8, dwe.a, 10387312)
-         )
-      );
-      $$0.a(dvb.b, new dvo($$1.b(dvc.f), new dwd(32, 8, dwe.a, 14357617)));
-      $$0.a(dvb.c, new dvo($$1.b(dvc.g), new dwd(32, 8, dwe.a, 14357618)));
-      $$0.a(dvb.d, new dvo($$1.b(dvc.e), new dwd(32, 8, dwe.a, 14357619)));
-      $$0.a(dvb.e, new dvo($$1.b(dvc.j), new dwd(32, 8, dwe.a, 14357620)));
-      $$0.a(dvb.f, new dvo($$1.b(dvc.a), new dwd(ib.g, dwf.c.b, 0.2F, 165745296, Optional.of(new dwf.a($$3, 10)), 32, 8, dwe.a)));
-      $$0.a(dvb.q, new dvo($$1.b(dvc.F), new dwd(24, 8, dwe.a, 20083232)));
-      $$0.a(dvb.g, new dvo($$1.b(dvc.l), new dwd(32, 5, dwe.b, 10387313)));
-      $$0.a(dvb.h, new dvo($$1.b(dvc.d), new dwd(80, 20, dwe.b, 10387319)));
-      $$0.a(dvb.i, new dvo($$1.b(dvc.r), new dwd(new ib(9, 0, 9), dwf.c.c, 0.01F, 0, Optional.empty(), 1, 0, dwe.a)));
-      $$0.a(dvb.j, new dvo(List.of(dvo.a($$1.b(dvc.b)), dvo.a($$1.b(dvc.c))), new dwd(ib.g, dwf.c.d, 0.004F, 0, Optional.empty(), 1, 0, dwe.a)));
+public class od {
+   public static final aew<dwr> a = oa.a("village/snowy/town_centers");
+   private static final aew<dwr> b = oa.a("village/snowy/terminators");
+
+   public static void a(nt<dwr> $$0) {
+      hh<dum> $$1 = $$0.a(je.ay);
+      hg<dum> $$2 = $$1.b(pl.h);
+      hg<dum> $$3 = $$1.b(pl.c);
+      hg<dum> $$4 = $$1.b(pl.d);
+      hh<dyz> $$5 = $$0.a(je.aA);
+      hg<dyz> $$6 = $$5.b(ob.k);
+      hg<dyz> $$7 = $$5.b(ob.n);
+      hg<dyz> $$8 = $$5.b(ob.c);
+      hh<dwr> $$9 = $$0.a(je.aC);
+      hg<dwr> $$10 = $$9.b(oa.a);
+      hg<dwr> $$11 = $$9.b(b);
       $$0.a(
-         dvb.k,
-         new dvo(
-            List.of(
-               dvo.a($$1.b(dvc.y)),
-               dvo.a($$1.b(dvc.z)),
-               dvo.a($$1.b(dvc.A)),
-               dvo.a($$1.b(dvc.B)),
-               dvo.a($$1.b(dvc.C)),
-               dvo.a($$1.b(dvc.D)),
-               dvo.a($$1.b(dvc.E))
+         a,
+         new dwr(
+            $$10,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/town_centers/snowy_meeting_point_1"), 100),
+               Pair.of(dwp.a("village/snowy/town_centers/snowy_meeting_point_2"), 50),
+               Pair.of(dwp.a("village/snowy/town_centers/snowy_meeting_point_3"), 150),
+               Pair.of(dwp.a("village/snowy/zombie/town_centers/snowy_meeting_point_1"), 2),
+               Pair.of(dwp.a("village/snowy/zombie/town_centers/snowy_meeting_point_2"), 1),
+               Pair.of(dwp.a("village/snowy/zombie/town_centers/snowy_meeting_point_3"), 3)
             ),
-            new dwd(40, 15, dwe.a, 34222645)
+            dwr.a.b
          )
       );
-      $$0.a(dvb.l, new dvo(List.of(dvo.a($$1.b(dvc.h)), dvo.a($$1.b(dvc.i))), new dwd(24, 4, dwe.a, 165745295)));
-      $$0.a(dvb.m, new dvo(List.of(dvo.a($$1.b(dvc.m)), dvo.a($$1.b(dvc.n))), new dwd(20, 8, dwe.a, 14357621)));
-      $$0.a(dvb.n, new dvo(List.of(dvo.a($$1.b(dvc.o), 2), dvo.a($$1.b(dvc.s), 3)), new dwd(27, 4, dwe.a, 30084232)));
-      $$0.a(dvb.o, new dvo($$1.b(dvc.p), new dwd(2, 1, dwe.a, 14357921)));
-      $$0.a(dvb.p, new dvo($$1.b(dvc.q), new dwd(20, 11, dwe.b, 10387313)));
-      $$0.a(dvb.r, new dvo($$1.b(dvc.k), new dwc(32, 3, 128, $$2.b(aps.o))));
-      $$0.a(dvb.s, new dvo($$1.b(dvc.G), new dwd(34, 8, dwe.a, 83469867)));
+      oa.a(
+         $$0,
+         "village/snowy/streets",
+         new dwr(
+            $$11,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/streets/corner_01", $$6), 2),
+               Pair.of(dwp.a("village/snowy/streets/corner_02", $$6), 2),
+               Pair.of(dwp.a("village/snowy/streets/corner_03", $$6), 2),
+               Pair.of(dwp.a("village/snowy/streets/square_01", $$6), 2),
+               Pair.of(dwp.a("village/snowy/streets/straight_01", $$6), 4),
+               Pair.of(dwp.a("village/snowy/streets/straight_02", $$6), 4),
+               Pair.of(dwp.a("village/snowy/streets/straight_03", $$6), 4),
+               Pair.of(dwp.a("village/snowy/streets/straight_04", $$6), 7),
+               Pair.of(dwp.a("village/snowy/streets/straight_06", $$6), 4),
+               Pair.of(dwp.a("village/snowy/streets/straight_08", $$6), 4),
+               Pair.of(dwp.a("village/snowy/streets/crossroad_02", $$6), 1),
+               Pair.of(dwp.a("village/snowy/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(dwp.a("village/snowy/streets/crossroad_04", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/streets/crossroad_05", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/streets/crossroad_06", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/streets/turn_01", $$6), 3)
+               }
+            ),
+            dwr.a.a
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/zombie/streets",
+         new dwr(
+            $$11,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/zombie/streets/corner_01", $$6), 2),
+               Pair.of(dwp.a("village/snowy/zombie/streets/corner_02", $$6), 2),
+               Pair.of(dwp.a("village/snowy/zombie/streets/corner_03", $$6), 2),
+               Pair.of(dwp.a("village/snowy/zombie/streets/square_01", $$6), 2),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_01", $$6), 4),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_02", $$6), 4),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_03", $$6), 4),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_04", $$6), 7),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_06", $$6), 4),
+               Pair.of(dwp.a("village/snowy/zombie/streets/straight_08", $$6), 4),
+               Pair.of(dwp.a("village/snowy/zombie/streets/crossroad_02", $$6), 1),
+               Pair.of(dwp.a("village/snowy/zombie/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(dwp.a("village/snowy/zombie/streets/crossroad_04", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/zombie/streets/crossroad_05", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/zombie/streets/crossroad_06", $$6), 2),
+                  Pair.of(dwp.a("village/snowy/zombie/streets/turn_01", $$6), 3)
+               }
+            ),
+            dwr.a.a
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/houses",
+         new dwr(
+            $$11,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_1"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_2"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_3"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_4"), 3),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_5"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_6"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_7"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_small_house_8"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_medium_house_1"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_medium_house_2"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_medium_house_3"), 2),
+               Pair.of(dwp.a("village/snowy/houses/snowy_butchers_shop_1"), 2),
+               new Pair[]{
+                  Pair.of(dwp.a("village/snowy/houses/snowy_butchers_shop_2"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_tool_smith_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_fletcher_house_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_shepherds_house_1"), 3),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_armorer_house_1"), 1),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_armorer_house_2"), 1),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_fisher_cottage"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_tannery_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_cartographer_house_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_library_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_masons_house_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_masons_house_2"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_weapon_smith_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_temple_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_farm_1", $$7), 3),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_farm_2", $$7), 3),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_animal_pen_1"), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_animal_pen_2"), 2),
+                  Pair.of(dwp.g(), 6)
+               }
+            ),
+            dwr.a.b
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/zombie/houses",
+         new dwr(
+            $$11,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_1", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_2", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_3", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_4", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_5", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_6", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_7", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_small_house_8", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_medium_house_1", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_medium_house_2", $$8), 2),
+               Pair.of(dwp.a("village/snowy/zombie/houses/snowy_medium_house_3", $$8), 1),
+               Pair.of(dwp.a("village/snowy/houses/snowy_butchers_shop_1", $$8), 2),
+               new Pair[]{
+                  Pair.of(dwp.a("village/snowy/houses/snowy_butchers_shop_2", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_tool_smith_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_fletcher_house_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_shepherds_house_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_armorer_house_1", $$8), 1),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_armorer_house_2", $$8), 1),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_fisher_cottage", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_tannery_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_cartographer_house_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_library_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_masons_house_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_masons_house_2", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_weapon_smith_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_temple_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_farm_1", $$8), 3),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_farm_2", $$8), 3),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_animal_pen_1", $$8), 2),
+                  Pair.of(dwp.a("village/snowy/houses/snowy_animal_pen_2", $$8), 2),
+                  Pair.of(dwp.g(), 6)
+               }
+            ),
+            dwr.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new dwr(
+            $$10,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/plains/terminators/terminator_01", $$6), 1),
+               Pair.of(dwp.a("village/plains/terminators/terminator_02", $$6), 1),
+               Pair.of(dwp.a("village/plains/terminators/terminator_03", $$6), 1),
+               Pair.of(dwp.a("village/plains/terminators/terminator_04", $$6), 1)
+            ),
+            dwr.a.a
+         )
+      );
+      oa.a($$0, "village/snowy/trees", new dwr($$10, ImmutableList.of(Pair.of(dwp.a($$2), 1)), dwr.a.b));
+      oa.a(
+         $$0,
+         "village/snowy/decor",
+         new dwr(
+            $$10,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_01"), 4),
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_02"), 4),
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_03"), 1),
+               Pair.of(dwp.a($$2), 4),
+               Pair.of(dwp.a($$3), 4),
+               Pair.of(dwp.a($$4), 1),
+               Pair.of(dwp.g(), 9)
+            ),
+            dwr.a.b
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/zombie/decor",
+         new dwr(
+            $$10,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_01", $$8), 1),
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_02", $$8), 1),
+               Pair.of(dwp.a("village/snowy/snowy_lamp_post_03", $$8), 1),
+               Pair.of(dwp.a($$2), 4),
+               Pair.of(dwp.a($$3), 4),
+               Pair.of(dwp.a($$4), 4),
+               Pair.of(dwp.g(), 7)
+            ),
+            dwr.a.b
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/villagers",
+         new dwr(
+            $$10,
+            ImmutableList.of(
+               Pair.of(dwp.a("village/snowy/villagers/nitwit"), 1),
+               Pair.of(dwp.a("village/snowy/villagers/baby"), 1),
+               Pair.of(dwp.a("village/snowy/villagers/unemployed"), 10)
+            ),
+            dwr.a.b
+         )
+      );
+      oa.a(
+         $$0,
+         "village/snowy/zombie/villagers",
+         new dwr(
+            $$10,
+            ImmutableList.of(Pair.of(dwp.a("village/snowy/zombie/villagers/nitwit"), 1), Pair.of(dwp.a("village/snowy/zombie/villagers/unemployed"), 10)),
+            dwr.a.b
+         )
+      );
    }
 }
