@@ -1,17 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class or {
-   public static final aew<dnj<?, ?>> a = os.a("end_spike");
-   public static final aew<dnj<?, ?>> b = os.a("end_gateway_return");
-   public static final aew<dnj<?, ?>> c = os.a("end_gateway_delayed");
-   public static final aew<dnj<?, ?>> d = os.a("chorus_plant");
-   public static final aew<dnj<?, ?>> e = os.a("end_island");
+   public static final aew<dnj<?, ?>> a = ot.a("monster_room");
+   public static final aew<dnj<?, ?>> b = ot.a("fossil_coal");
+   public static final aew<dnj<?, ?>> c = ot.a("fossil_diamonds");
+   public static final aew<dnj<?, ?>> d = ot.a("dripstone_cluster");
+   public static final aew<dnj<?, ?>> e = ot.a("large_dripstone");
+   public static final aew<dnj<?, ?>> f = ot.a("pointed_dripstone");
+   public static final aew<dnj<?, ?>> g = ot.a("underwater_magma");
+   public static final aew<dnj<?, ?>> h = ot.a("glow_lichen");
+   public static final aew<dnj<?, ?>> i = ot.a("rooted_azalea_tree");
+   public static final aew<dnj<?, ?>> j = ot.a("cave_vine");
+   public static final aew<dnj<?, ?>> k = ot.a("cave_vine_in_moss");
+   public static final aew<dnj<?, ?>> l = ot.a("moss_vegetation");
+   public static final aew<dnj<?, ?>> m = ot.a("moss_patch");
+   public static final aew<dnj<?, ?>> n = ot.a("moss_patch_bonemeal");
+   public static final aew<dnj<?, ?>> o = ot.a("dripleaf");
+   public static final aew<dnj<?, ?>> p = ot.a("clay_with_dripleaves");
+   public static final aew<dnj<?, ?>> q = ot.a("clay_pool_with_dripleaves");
+   public static final aew<dnj<?, ?>> r = ot.a("lush_caves_clay");
+   public static final aew<dnj<?, ?>> s = ot.a("moss_patch_ceiling");
+   public static final aew<dnj<?, ?>> t = ot.a("spore_blossom");
+   public static final aew<dnj<?, ?>> u = ot.a("amethyst_geode");
+   public static final aew<dnj<?, ?>> v = ot.a("sculk_patch_deep_dark");
+   public static final aew<dnj<?, ?>> w = ot.a("sculk_patch_ancient_city");
+   public static final aew<dnj<?, ?>> x = ot.a("sculk_vein");
 
-   public static void a(ns<dnj<?, ?>> $$0) {
-      os.a($$0, a, dnw.J, new dqu(false, ImmutableList.of(), null));
-      os.a($$0, b, dnw.L, dpz.a(akr.a, true));
-      os.a($$0, c, dnw.L, dpz.a());
-      os.a($$0, d, dnw.l);
-      os.a($$0, e, dnw.K);
+   private static hg<dum> a(hc $$0) {
+      return pi.a(
+         dnw.w,
+         new dpr(
+            List.of(
+               dpr.a(new bgk(bfi.<bgd>a().a(bgj.a(0, 4), 2).a(bga.a(0), 1).a()), dsb.a(csw.rD.n().a(dfz.R, $$0))),
+               dpr.a(bga.a(1), dsb.a(csw.rC.n().a(dfz.R, $$0)))
+            ),
+            hc.b,
+            dlz.d,
+            true
+         )
+      );
+   }
+
+   private static hg<dum> a() {
+      return pi.a(
+         dnw.S,
+         new dqs(
+            new dsl(
+               bfi.<dfj>a().a(csw.rE.n().a(daa.b, hc.f), 1).a(csw.rE.n().a(daa.b, hc.e), 1).a(csw.rE.n().a(daa.b, hc.c), 1).a(csw.rE.n().a(daa.b, hc.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(nt<dnj<?, ?>> $$0) {
+      hh<dnj<?, ?>> $$1 = $$0.a(je.as);
+      hh<dyz> $$2 = $$0.a(je.aA);
+      ot.a($$0, a, dnw.C);
+      List<aex> $$3 = List.of(
+         new aex("fossil/spine_1"),
+         new aex("fossil/spine_2"),
+         new aex("fossil/spine_3"),
+         new aex("fossil/spine_4"),
+         new aex("fossil/skull_1"),
+         new aex("fossil/skull_2"),
+         new aex("fossil/skull_3"),
+         new aex("fossil/skull_4")
+      );
+      List<aex> $$4 = List.of(
+         new aex("fossil/spine_1_coal"),
+         new aex("fossil/spine_2_coal"),
+         new aex("fossil/spine_3_coal"),
+         new aex("fossil/spine_4_coal"),
+         new aex("fossil/skull_1_coal"),
+         new aex("fossil/skull_2_coal"),
+         new aex("fossil/skull_3_coal"),
+         new aex("fossil/skull_4_coal")
+      );
+      hg<dyz> $$5 = $$2.b(ob.D);
+      ot.a($$0, b, dnw.p, new dob($$3, $$4, $$5, $$2.b(ob.E), 4));
+      ot.a($$0, c, dnw.p, new dob($$3, $$4, $$5, $$2.b(ob.F), 4));
+      ot.a($$0, d, dnw.aj, new dpy(12, bgj.a(3, 6), bgj.a(2, 8), 1, 3, bgj.a(2, 4), bgi.b(0.3F, 0.7F), bfx.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      ot.a($$0, e, dnw.ak, new dqd(30, bgj.a(3, 19), bgi.b(0.4F, 2.0F), 0.33F, bgi.b(0.3F, 0.9F), bgi.b(0.4F, 1.0F), bgi.b(0.0F, 0.3F), 4, 0.6F));
+      ot.a(
+         $$0,
+         f,
+         dnw.ag,
+         new dqt(
+            hk.a(
+               pi.a(dnw.al, new dqj(0.2F, 0.7F, 0.5F, 0.5F), dug.a(hc.a, dlz.c(), dlz.d, 12), dur.a(bga.a(1))),
+               pi.a(dnw.al, new dqj(0.2F, 0.7F, 0.5F, 0.5F), dug.a(hc.b, dlz.c(), dlz.d, 12), dur.a(bga.a(-1)))
+            )
+         )
+      );
+      ot.a($$0, g, dnw.B, new dqy(5, 1, 0.5F));
+      cxt $$6 = (cxt)csw.fg;
+      ot.a($$0, h, dnw.A, new dqf($$6, 20, false, true, true, 0.5F, hk.a(csv::q, csw.b, csw.g, csw.e, csw.c, csw.rt, csw.qA, csw.qz, csw.rI)));
+      ot.a(
+         $$0,
+         i,
+         dnw.z,
+         new dqq(
+            pi.a($$1.b(oy.w)),
+            3,
+            3,
+            apt.bv,
+            dsb.a(csw.rG),
+            20,
+            100,
+            3,
+            2,
+            dsb.a(csw.rF),
+            20,
+            2,
+            dlz.a(dlz.b(dlz.c(List.of(csw.a, csw.nc, csw.nb)), dlz.a(apt.cf)), dlz.a(hc.a.q(), apt.bZ))
+         )
+      );
+      dsl $$7 = new dsl(bfi.<dfj>a().a(csw.rv.n(), 4).a(csw.rv.n().a(ctq.s_, Boolean.valueOf(true)), 1));
+      dsh $$8 = new dsh(new dsl(bfi.<dfj>a().a(csw.ru.n(), 4).a(csw.ru.n().a(ctq.s_, Boolean.valueOf(true)), 1)), ctr.d, bgj.a(23, 25));
+      ot.a(
+         $$0,
+         j,
+         dnw.w,
+         new dpr(
+            List.of(dpr.a(new bgk(bfi.<bgd>a().a(bgj.a(0, 19), 2).a(bgj.a(0, 2), 3).a(bgj.a(0, 6), 10).a()), $$7), dpr.a(bga.a(1), $$8)), hc.a, dlz.c, true
+         )
+      );
+      ot.a($$0, k, dnw.w, new dpr(List.of(dpr.a(new bgk(bfi.<bgd>a().a(bgj.a(0, 3), 5).a(bgj.a(1, 7), 1).a()), $$7), dpr.a(bga.a(1), $$8)), hc.a, dlz.c, true));
+      ot.a($$0, l, dnw.S, new dqs(new dsl(bfi.<dfj>a().a(csw.ry.n(), 4).a(csw.rx.n(), 7).a(csw.rz.n(), 25).a(csw.bt.n(), 50).a(csw.iH.n(), 10))));
+      ot.a($$0, m, dnw.x, new dqz(apt.bt, dsb.a(csw.rB), pi.a($$1.b(l)), dud.b, bga.a(1), 0.0F, 5, 0.8F, bgj.a(4, 7), 0.3F));
+      ot.a($$0, n, dnw.x, new dqz(apt.bt, dsb.a(csw.rB), pi.a($$1.b(l)), dud.b, bga.a(1), 0.0F, 5, 0.6F, bgj.a(1, 2), 0.75F));
+      ot.a($$0, o, dnw.ag, new dqt(hk.a(a(), a(hc.f), a(hc.e), a(hc.d), a(hc.c))));
+      ot.a($$0, p, dnw.x, new dqz(apt.bu, dsb.a(csw.dR), pi.a($$1.b(o)), dud.b, bga.a(3), 0.8F, 2, 0.05F, bgj.a(4, 7), 0.7F));
+      ot.a($$0, q, dnw.y, new dqz(apt.bu, dsb.a(csw.dR), pi.a($$1.b(o)), dud.b, bga.a(3), 0.8F, 5, 0.1F, bgj.a(4, 7), 0.7F));
+      ot.a($$0, r, dnw.ah, new dql(pi.a($$1.b(p)), pi.a($$1.b(q))));
+      ot.a($$0, s, dnw.x, new dqz(apt.bt, dsb.a(csw.rB), pi.a($$1.b(k)), dud.a, bgj.a(1, 2), 0.0F, 5, 0.08F, bgj.a(4, 7), 0.3F));
+      ot.a($$0, t, dnw.S, new dqs(dsb.a(csw.rw)));
+      ot.a(
+         $$0,
+         u,
+         dnw.ai,
+         new dqb(
+            new dkp(
+               dsb.a(csw.a),
+               dsb.a(csw.qt),
+               dsb.a(csw.qu),
+               dsb.a(csw.qA),
+               dsb.a(csw.sd),
+               List.of(csw.qy.n(), csw.qx.n(), csw.qw.n(), csw.qv.n()),
+               apt.bH,
+               apt.bJ
+            ),
+            new dkr(1.7, 2.2, 3.2, 4.2),
+            new dkq(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bgj.a(4, 6),
+            bgj.a(3, 4),
+            bgj.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      ot.a($$0, v, dnw.am, new dqr(10, 32, 64, 0, 1, bga.a(0), 0.5F));
+      ot.a($$0, w, dnw.am, new dqr(10, 32, 64, 0, 1, bgj.a(1, 3), 0.5F));
+      cxt $$9 = (cxt)csw.qG;
+      ot.a($$0, x, dnw.A, new dqf($$9, 20, true, true, true, 1.0F, hk.a(csv::q, csw.b, csw.g, csw.e, csw.c, csw.rt, csw.qA, csw.qz, csw.rI)));
    }
 }
